--- a/notebooks/02_create_dataset.ipynb
+++ b/notebooks/02_create_dataset.ipynb
@@ -242,7 +242,7 @@
     "from PIL import Image\n",
     "\n",
     "\n",
-    "class PokemonDataset(Dataset):\n",
+    "class GamesDataset(Dataset):\n",
     "    def __init__(self, data_path, transform=None):\n",
     "        data_path = Path(data_path)\n",
     "        df = pd.DataFrame([\n",
@@ -323,7 +323,7 @@
     }
    ],
    "source": [
-    "ds = PokemonDataset('../data/Dataset')\n",
+    "ds = GamesDataset('../data/Dataset')\n",
     "ds[2][0]"
    ]
   },
@@ -577,7 +577,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class PokemonDataset(Dataset):\n",
+    "class GamesDataset(Dataset):\n",
     "    def __init__(self, data_path, transform=None):\n",
     "        data_path = Path(data_path)\n",
     "        df = pd.DataFrame([\n",
@@ -644,7 +644,7 @@
     }
    ],
    "source": [
-    "ds = PokemonDataset('../data/Dataset/')\n",
+    "ds = GamesDataset('../data/Dataset/')\n",
     "ds[0][0]"
    ]
   },
@@ -696,7 +696,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class PokemonDataset(Dataset):\n",
+    "class GamesDataset(Dataset):\n",
     "    def __init__(self, data_path, subset, transform=None):\n",
     "        data_path = Path(data_path)\n",
     "        df = pd.DataFrame([\n",
@@ -776,7 +776,7 @@
     }
    ],
    "source": [
-    "ds_train = PokemonDataset(data_path='../data/Dataset', subset='train')\n",
+    "ds_train = GamesDataset(data_path='../data/Dataset', subset='train')\n",
     "ds_train[0][0]"
    ]
   },
@@ -944,9 +944,9 @@
     "])\n",
     "\n",
     "# Create datasets\n",
-    "ds_train = PokemonDataset('../data/Dataset', 'train', transform=train_tfms)\n",
-    "ds_val = PokemonDataset('../data/Dataset', 'val', transform=val_tfms)\n",
-    "ds_test = PokemonDataset('../data/Dataset', 'test', transform=val_tfms)"
+    "ds_train = GamesDataset('../data/Dataset', 'train', transform=train_tfms)\n",
+    "ds_val = GamesDataset('../data/Dataset', 'val', transform=val_tfms)\n",
+    "ds_test = GamesDataset('../data/Dataset', 'test', transform=val_tfms)"
    ]
   },
   {
